Fix/link entity (#10)
* FIX: add test to fix link entity update (by item saving)

* FIX: link from inventory service

* FIX: job to create first entity and cors policy for backend

* FIX: issue on method to find one item by uuid

* FEAT: change default setup of CORS policy

* FIX: traffic map

* FEAT: add auto-layout for traffic

* REFACTOR: E2E tests and fix exception

* FEAT: add one IP filter

* FEAT: add app event for syslog agregator and backend api route to syslog app

* FEAT: adjust traffic map

* FEET:improve about page and add agregator syslog view

* FIXX:StartupJob

* FEAT: update adr and update About page

---------

Co-authored-by: Fabien Haingue (TMMF) <Fabien.Haingue@toyotafr.com>